test/classes/errors/nilability-init-var/init-var-oknil-owned-from-oknil-unmanaged.good
init-var-oknil-owned-from-oknil-unmanaged.chpl:9: error: cannot assign to an owned variable from an unmanaged class
